--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -16,7 +16,13 @@
 
 %% OPTIONAL MACRO DEFINITIONS
 %\def\s{\sigma}
-
+\newcommand{\set}[1]{\{ #1 \}} % A set
+\newcommand{\indicator}[1]{I_{\set{#1}}} % The indicator function.
+\newcommand{\reals}{\mathbb{R}} % the set of real numbers
+\newcommand{\features}{x} % The feature space
+\newcommand{\outcomes}{y} % The feature space
+\newcommand{\featureS}{\mathcal{X}} % The feature space
+\newcommand{\outcomeS}{\mathcal{Y}} % The feature space
 
 
 
@@ -109,16 +115,34 @@ We start by establishing a best practice for permutation testing using the accur
 We discuss the problem characteristics that govern the magnitude of the conservativeness, and try to offer an intuition to the scope of the observation that a multivariate test should always be preferred over a classification approach. 
 
 
+\section{Problem setup}
+Adhering to our neuroscientific example, we now formalize terminology and notation. 
+Let $\outcomes \in \outcomeS$ be a class encoding. In our vocal/non-vocal example, using effect coding, we have $\outcomeS=\set{-1,1}$.
+Let $\features \in \featureS$ be a $p$ dimensional feature vector. 
+In our vocal/non-vocal example $p$ is governed by the number of voxels in a regions, which is the number of voxels in each brain region tested. We thus have $\featureS=\reals^{27}$. 
+
+Given $n$ pairs of $(\features_i,\outcomes_i)$, typically assumed i.i.d., the \emph{testing} approach to localization amounts to testing whether $\features|\outcomes=1$ has the the same distribution as $\features|\outcomes=-1$.
+I.e., the multivariate voxel activation pattern has the same distribution when given a vocal stimulus, as when given a non-vocal stimulus. 
+The \emph{classification} approach to the localization problem 
+
 
 \section{How to perform the permutation test?}
 
 To discuss the power of a permutation test with the accuracy, we need to establish some best practices for such a test. 
 The design of the test consists of the following choices: 
 \begin{description}
-\item [What test statistic?] What is the test statistic?
+\item [What test statistic?] 
 \item [Cross validated or not?] Is the statistic cross validated or not?
-\item [What folding scheme?] Assuming the statistic is 
-\item [How many folds?]
+\item [Refolding?] For a K-fold cross validated test statistic: is the data refolded in each permutation? 
+\item [Balanced folding?] For a K-fold cross validated test statistic: is the data folding balanced? (a.k.a. stratified).
+\item [How many folds?] 
+
+We will now adress these questions while bearing in mind that unlike the typical supervised learning setup, we are not interested in an unbiased estimate of the prediction error, but rather in the mere detection of a difference between two groups, leading to a better-than-chance accuracy. 
+
+\paragraph{What test statistic}
+
+
+
 \end{description}
 
 
