--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -23,6 +23,9 @@
 \newcommand{\outcomes}{y} % The feature space
 \newcommand{\featureS}{\mathcal{X}} % The feature space
 \newcommand{\outcomeS}{\mathcal{Y}} % The feature space
+\newcommand{\hyp}{f} % A hypothesis
+\newcommand{\hypclass}{\mathcal{F}}
+\newcommand{\expect}[1]{\mathbf{E}\left[ #1 \right]} % The expectation operator
 
 
 
@@ -123,7 +126,11 @@ In our vocal/non-vocal example $p$ is governed by the number of voxels in a regi
 
 Given $n$ pairs of $(\features_i,\outcomes_i)$, typically assumed i.i.d., the \emph{testing} approach to localization amounts to testing whether $\features|\outcomes=1$ has the the same distribution as $\features|\outcomes=-1$.
 I.e., the multivariate voxel activation pattern has the same distribution when given a vocal stimulus, as when given a non-vocal stimulus. 
-The \emph{classification} approach to the localization problem 
+The \emph{classification} approach to the localization problem amounts to learning a predictive model $\hat{\hyp}(\features)$ from some assumed model class $\hat{\hyp}\in \hypclass$. 
+The prediction accuracy is defined as the probability of a given classifier $\hat{\hyp}$ of making a correct prediction $\expect{\indicator{\hat{\hyp}(x)=y}}$ when given a new, randomly drawn data point, ($\features,\outcomes$).
+
+
+
 
 
 \section{How to perform the permutation test?}
