--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -168,7 +168,7 @@ We will thus be considering both cross validated accuracies, and train accuracie
 
 
 \paragraph{Refolding?}
-The standard practice in neuroimaging is to refold the data after each permutation. 
+The standard practice in neuroimaging is to refold the data after each permutation [TODO:ref].
 This is imperative if permuting labels while aiming at balanced data folds. 
 This is not, however, imperative in general. 
 In this work, we will adhere however to the standard practice of refolding the data within each permutation.
@@ -181,14 +181,17 @@ After a label permutation, the folds will probably not be balanced, and will thu
 If the features are permuted, then the labels conserve their original fold assignments, and the data need not be refolded. 
 
 
-
-
-
 \paragraph{Balanced folding?}
+The standard practice when cross validating is to constrain the data folds to be balanced (i.e. stratified)[TODO: ref].
+This is well justified when aiming at unbiased accuracy estimation. 
+This also simplifies matter when aiming at signal detection, as can be seen from the above discussion of the appropriate test statistic. 
+Then again, it may complicate matters, as can be seen from the above discussion on label versus feature permutation. 
+In general , it is not imperative in general, and we will indeed be comparing the effect of balanced foldings versus unbalanced. 
+
 
 \paragraph{How many folds?}
-
-
+Different authors suggest different rules for the number of folds. 
+We will be varying the number of folds, since it will affect the concentration of the estimated accuracy, which will have a crucial effect on the conservativeness of the permutation test. 
 
 \end{description}
 
