--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -192,6 +192,7 @@ In general , it is not imperative in general, and we will indeed be comparing th
 \paragraph{How many folds?}
 Different authors suggest different rules for the number of folds. 
 We will be varying the number of folds, since it will affect the concentration of the estimated accuracy, which will have a crucial effect on the conservativeness of the permutation test. 
+Our intuition suggests that since more folds imply a less concentrated estimate, then leave-one-out should be the less conservative, and 2-fold should be the most conservative. 
 
 \end{description}
 
