--- a/Permuting_Accuracy.bib
+++ b/Permuting_Accuracy.bib
@@ -454,4 +454,21 @@ TECHNOMETRICS "[This] is a vast and complex book. Generally, it concentrates on 
   file = {Gilron et al_2016_Quantifying spatial pattern similarity in multivariate analysis using.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/3AE7RZEB/Gilron et al_2016_Quantifying spatial pattern similarity in multivariate analysis using.pdf:application/pdf;arXiv.org Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/F5VJ3TWX/1605.html:text/html}
 }
 
+@article{hemerik_exact_2014,
+  title = {Exact testing with random permutations},
+  abstract = {The way in which random permutations have been used in various permutation-based methods leads to anti-conservativeness, especially in multiple testing contexts. Problems arise in particular for Westfall and Young's maxT method, a more recent method by Meinshausen and a global test that we introduce. We illustrate this using simulations. We solve the problem of anti-conservativeness by proving that an exact test is obtained, if the identity map is added to the randomly drawn permutations.},
+  timestamp = {2016-07-26T08:31:50Z},
+  archivePrefix = {arXiv},
+  eprinttype = {arxiv},
+  eprint = {1411.7565},
+  primaryClass = {math, stat},
+  urldate = {2016-07-26},
+  journal = {arXiv:1411.7565 [math, stat]},
+  author = {Hemerik, Jesse and Goeman, Jelle},
+  month = nov,
+  year = {2014},
+  keywords = {62G09,Mathematics - Statistics Theory},
+  file = {Hemerik_Goeman_2014_Exact testing with random permutations.pdf:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/6NB6FSI9/Hemerik_Goeman_2014_Exact testing with random permutations.pdf:application/pdf;arXiv.org Snapshot:/home/johnros/.zotero/zotero/66g0wvis.default/zotero/storage/494EESV4/1411.html:text/html}
+}
+
 
