--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -59,11 +59,6 @@
 \contributor{Submitted to Proceedings of the National Academy of Sciences
 of the United States of America}
 
-%%%Newly updated.
-%%% If significance statement need, then can use the below command otherwise just delete it.
-%\significancetext{RJSM and ACAC developed the concept of the study. RJSM conducted the analysis, data interpretation and drafted the manuscript. AGB contributed to the development of the statistical methods, data interpretation and drafting of the manuscript.}
-
-
 
 \maketitle
 
@@ -75,10 +70,12 @@ of the United States of America}
 
 
 
-\keywords{XXX | YYY | ZZZ }
-
+%\keywords{TODO | TODO | TODO}
 %\abbreviations{TODO}
 
+
+
+%%%% Section %%%%
 \section{Introduction}
 \label{sec:introduction}
 
@@ -297,12 +294,27 @@ It is, however, too early to conclude that a multivariate test is to be preferre
 
 
 
+
+
+\section{A Neuroimaging Example}
+\label{sec:example}
+
+In the previous sections, we have established using simulations that 
+
+% Power of SVM versus SD.
+% Difficulties of implementation.
+
+
+
+
 %%%% Section %%%%
 \section{Discussion}
 \label{sec:discussion}
 
 % Not all problems are signal detection.
 % Implementation difficulty with discrete test statistics.
+% Signal not in location.
+% Heavy tails.
 
 
 fff
