--- a/permuting_accuracy.tex
+++ b/permuting_accuracy.tex
@@ -82,7 +82,9 @@ of the United States of America}
 A common workflow in genetics or neuroimaging consists of fitting a classifier, and estimating its predictive accuracy using cross validation. 
 Given that the cross validated accuracy is a random quantity, it is then common to test if the cross validated accuracy is significantly better than chance using a permutation test.  
 Genetic examples include [TODO: elaborate]\cite{jiang_calculating_2008,radmacher_paradigm_2002-1}.
-Neuroscience examples include the recently popularized \emph{multivariate pattern analysis} (MVPA) \cite{kriegeskorte_information-based_2006,varoquaux_assessing_2016,golland_permutation_2003}.
+Neuroscience examples include \emph{multivariate pattern analysis} (MVPA) \cite{kriegeskorte_information-based_2006,varoquaux_assessing_2016,golland_permutation_2003}.
+MVPA has become a very popular methodology, as the $956$ citations\footnote{Based on GoogleScholar. Accesses on 26.7.2016.} of \cite{kriegeskorte_information-based_2006} may attest.
+
 
 To fix ideas, we will adhere to a Neuroscientific example: 
 In \cite{gilron_quantifying_2016}, the authors seek to detect auditory brain regions which distinguish between vocal and non-vocal stimuli. 
@@ -97,8 +99,9 @@ At this point, it becomes unclear which is the preferred avenue.
 This question was indeed the subject of \cite{ramdas_classification_2016}, which compared the Hotelling test to the classification accuracy of \emph{Fisher's linear discriminant analysis} (LDA) \cite{hastie_elements_2003-1}. 
 Their asymptotic analysis concluded that methods are equivalent with respect to the order of convergence to a consistent test. The same authors did find that the methods differ in the constants governing the convergence.
 
-Those constants, are the focus of this contribution. In particular, which signal detection method is to be preferred in finite samples? 
-Our conclusion is quite simple: signal detection using multivariate tests almost always has more power than using the accuracy test statistic.
+Those constants, are the focus of this contribution. 
+In particular, which signal detection method is to be preferred in finite samples? 
+Our conclusion is quite simple: signal detection using multivariate tests of location almost always has more power than accuracy tests.
 
 The main argument for our statement rests upon the observation that with typical sample sizes, the accuracy test statistic is highly discrete. 
 Discrete test statistics are known to be conservative, since they cannot exhaust the permissible type $I$ error rates. 
